  o big cleanup, removal of duplicate files after introduction of portasm
doc:
  o cleanup of manual and corrections
  o added info about newly supported and/or tested platforms (e.g. FreeBSD on ARM)
  o restructured folder layout for documentation
  o added API doc for dyncallback and dynload
  o added manpages for dyncallback and dynload
tests:
  o added arm/thumb interwork test suite
bindings:
  o godc: bindings for Go

Version 0.7
architecture:
  o added subproject: portasm - portable (GNU AS,+Apple and MASM) assembly framework  
  o added subproject: autovar - predefined macro framework (was dyncall_macros.h)
  o added support for sparc (32-bit) (tested on linux/debian,openbsd,solaris)
  o added support for sparc (64-bit) (tested on linux/debian,openbsd,solaris)
  o added support for Solaris and SunPro compiler for i386, x86_64, sparc and sparc64
  o improved auto-detection via preprocessor defines
dyncall updates:
  o uses portasm (GNU,Apple,Microsoft) common sources for x86,x64,ppc32,arm32_arm
  o bug fixes for x64/win64 calling convention
  o added support for mingw32-w64 on x64
  o improved cdecl x86 calling convention: stack always 16 byte aligned
  o updated API and initial support for structs (for x86/AMD64)
  o initial support for syscalls on x86, added x86 int80h linux/bsd
  o added Minix port (stable)
  o optimized vector buffer for small type pushing
  o minor fix for amd64/sysv: alignment to 32-byte
  o bug fix for ppc32/sysv: ellipsis calls work now
  o updated API, introduced DC_CALL_C_ELLIPSIS_VARARGS
  o changed interface: dcMode does not reset internally anymore
dyncallback updates:
  o uses portasm for x86,x64
  o added Solaris/x86/sunpro port (stable)
  o added Minix port (unstable)
  o callback support for Darwin/ppc32
  o updates source, uses relative includes
dynload updates:
  o fixes for missing includes (dyncall_alloc.h)
  o fixes for self-resolving symbols on windows
  o removed Dbghelf.lib dependency
  o bug fixes for cygwin/x86